Switch container to fixed pos (fixes viewport size on mobile)

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 }
 
 .container {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
